2019-01-11 belangeo <belangeo@gmail.com>

    * Added setStopDelay method to PyoObjectBase class.

2019-01-09 belangeo <belangeo@gmail.com>

    * Added examples about multirate processing/synthesis.

2019-01-08 belangeo <belangeo@gmail.com>

    * Fixed all variant of audio arithmetic.

2018-12-28 belangeo <belangeo@gmail.com>

    * Added a new object: SVF2, a 2-pole state variable filter with many filter types.

2018-12-26 belangeo <belangeo@gmail.com>

    * Added a getPyoExamples function and changed example function to be able to
      execute one of the example.

2018-12-14 belangeo <belangeo@gmail.com>

    * Compiling for python 64-bit on Windows now work.

2018-12-14 belangeo <belangeo@gmail.com>

    * Fixed break-point-function tables malloc() corruption.

2018-12-14 belangeo <belangeo@gmail.com>

    * Changed the structure of the source code and the installed dependencies.

2018-12-11 belangeo <belangeo@gmail.com>

    * Added PyoObjectBase.preventAutoStart() method to stop propagation when
      autoStartChildren is activated in the Server.

2018-12-11 belangeo <belangeo@gmail.com>

    * Fixed bug in OscDataSend.addAddress().

2018-12-11 belangeo <belangeo@gmail.com>

    * Added autoStartChildren feature. For detail, see doc for Server.setAutoStartChildren,
      PyoObjectBase.useWaitTimeOnStop, PyoObjectBase.addLinkedObject and PyoObject.stop.

2018-11-22 belangeo <belangeo@gmail.com>

    * Added keyboard method to the Notein object (opens a virtual midi keyboard).

2018-11-20 belangeo <belangeo@gmail.com>

    * Added a new object: PyoGuiKeyboard, a virtual MIDI keyboard.

2018-11-06 belangeo <belangeo@gmail.com>

    * Embedded: Added a BPM variable in the embedded interpreter and a function in 
      PyoClass to change it according to the BPm of a DAW, for instance.

2018-11-02 belangeo <belangeo@gmail.com>

    * Embedded: Remove the wx import before importing pyo to prevent a crash on MacOS.

2018-11-02 belangeo <belangeo@gmail.com>
