@@ -1,3 +1,7 @@
+2019-01-22 belangeo <belangeo@gmail.com>
+
+    * Changed PyoObjectBase's method preventAutoStart() for allCAutoStart(switch).
+    
 2019-01-11 belangeo <belangeo@gmail.com>
 
     * Added setStopDelay method to PyoObjectBase class.
